apps/calidum-rotae/base/calidum-rotae-service/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: calidum-rotae-service
  namespace: calidum-rotae
spec:
  selector:
    app: calidum-rotae-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
