apps/calidum-rotae/base/calidum-rotae-service/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-calidum-rotae
spec:
  podSelector:
    matchLabels:
      app: calidum-rotae
  policyTypes:
    - Ingress
  ingress:
    - from: []
